--- a/Regresión/Regresion_MaquinaSoporteVectorial.ipynb
+++ b/Regresión/Regresion_MaquinaSoporteVectorial.ipynb
@@ -52,7 +52,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -80,7 +80,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,7 +113,7 @@
         "x = data1.iloc [:,1:2].values\n",
         "y = data1.iloc [:,2].values"
       ],
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -160,7 +160,7 @@
         "x= sc_x.fit_transform(x)\n",
         "y= sc_y.fit_transform(y.reshape(-1,1))"
       ],
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -211,9 +211,9 @@
       "source": [
         "from sklearn.svm import SVR\n",
         "regression = SVR(kernel='rbf')\n",
-        "regression.fit(x,y)"
+        "regression.fit(x,y.ravel())"
       ],
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,7 +248,7 @@
       "source": [
         "y_pred = sc_y.inverse_transform(regression.predict(sc_x.transform([[6.5]]) ))"
       ],
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -265,7 +265,7 @@
       "source": [
         "pd.DataFrame(y_pred)"
       ],
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -342,7 +342,7 @@
         "plt.ylabel(\"Sueldo\")\n",
         "plt.show()"
       ],
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -371,7 +371,7 @@
         "y_valor = sc_y.inverse_transform(y)\n",
         "y_predic_valor = sc_y.inverse_transform(regression.predict(x))"
       ],
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -388,7 +388,7 @@
       "source": [
         "pd.DataFrame(x_valor)"
       ],
-      "execution_count": 151,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -495,7 +495,7 @@
       "source": [
         "pd.DataFrame(y_predic_valor)"
       ],
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -622,7 +622,7 @@
         "plt.ylabel(\"Sueldo\")\n",
         "plt.show()"
       ],
-      "execution_count": 149,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
