--- a/Regresión/Regresion_SVR_Bajas_TEC.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_TEC.ipynb
@@ -310,30 +310,13 @@
       "metadata": {
         "id": "egHxH4VWVsZC",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "4aea3679-0749-4438-e46e-a2ac13b71aa4"
+        "colab": {}
       },
       "source": [
-        "len(x[:])"
+        "pd.DataFrame(x)"
       ],
-      "execution_count": 92,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "44"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 92
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -362,13 +345,25 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "oRTCrScGaEur",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "x= np.append(arr=np.ones((len(x[:]),1)).astype(int),values=x, axis=1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "8DOkqQQvdoSh",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
         "import statsmodels.api as smf\n",
-        "x= np.append(arr=np.ones((len(x[:]),1)).astype(int),values=x, axis=1)\n",
         "def MEliminaAtras (x2,SL):\n",
         "  numCol = len(x[0])\n",
         "  for i in range(0,numCol):\n",
