--- a/Regresión/Regresion_SVR_Bajas_TEC.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_TEC.ipynb
@@ -52,7 +52,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 81,
+      "execution_count": 95,
       "outputs": []
     },
     {
@@ -74,13 +74,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "3350dc62-09d2-49a1-b8fb-ab8f859bc0c2"
+        "outputId": "070e7904-ca9c-43bf-e626-5ce2c8d9292c"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 82,
+      "execution_count": 96,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +103,7 @@
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,3].values"
       ],
-      "execution_count": 83,
+      "execution_count": 97,
       "outputs": []
     },
     {
@@ -132,7 +132,7 @@
         "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[0,1])],remainder='passthrough')\n",
         "x= np.array(ct.fit_transform(x),dtype=np.integer)"
       ],
-      "execution_count": 84,
+      "execution_count": 98,
       "outputs": []
     },
     {
@@ -155,7 +155,7 @@
       "source": [
         "x = x[:,1:]"
       ],
-      "execution_count": 85,
+      "execution_count": 99,
       "outputs": []
     },
     {
@@ -205,7 +205,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.3, random_state=0)"
       ],
-      "execution_count": 86,
+      "execution_count": 100,
       "outputs": []
     },
     {
@@ -245,7 +245,7 @@
         "x= sc_x.fit_transform(x)\n",
         "y= sc_y.fit_transform(y.reshape(-1,1))"
       ],
-      "execution_count": 88,
+      "execution_count": 101,
       "outputs": []
     },
     {
@@ -280,7 +280,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "84e16bf4-6ca1-442f-a16f-af389b60f560"
+        "outputId": "3dc367d8-1711-4a63-8dbc-9c8182e1dfc1"
       },
       "source": [
         "''' C: Evitar el overfity '''\n",
@@ -288,7 +288,7 @@
         "regression = SVR(C=1.0,kernel='rbf')\n",
         "regression.fit(x,y.ravel())"
       ],
-      "execution_count": 89,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -301,7 +301,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 89
+          "execution_count": 102
         }
       ]
     },
@@ -352,7 +352,7 @@
       "source": [
         "x= np.append(arr=np.ones((len(x[:]),1)).astype(int),values=x, axis=1)"
       ],
-      "execution_count": null,
+      "execution_count": 104,
       "outputs": []
     },
     {
@@ -365,12 +365,17 @@
       "source": [
         "import statsmodels.api as smf\n",
         "def MEliminaAtras (x2,SL):\n",
-        "  numCol = len(x[0])\n",
+        "  numCol = len(x2[0])\n",
         "  for i in range(0,numCol):\n",
-        "    regresor_OLS = smf.OLS(endog=y, exog=x2).fit()\n",
+        "    regresor_OLS = smf.OLS(y, x2.tolist()).fit()\n",
         "    maxVar = max(regresor_OLS.pvalues).astype(float)\n",
         "    if maxVar > SL:\n",
-        "\n",
+        "      for j in range(0, numCol - i):\n",
+        "        if (regresor_OLS.pvalues[j].astype(float)==maxVar):\n",
+        "          x2 = np.delete(x2,j,1)\n",
+        "  regresor_OLS.summary()\n",
+        "  return x2\n",
+        "  \n",
         "SL=0.05\n",
         "x_opt = x[:,[0,1,2,3,4,5,6]]\n",
         "x_modelo = MEliminaAtras(x_opt, SL)"
