--- a/Regresión/Regresion_SVR_Bajas_TEC.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_TEC.ipynb
@@ -380,7 +380,7 @@
         "x_opt = x[:,[0,1,2,3,4,5,6]]\n",
         "x_modelo = MEliminaAtras(x_opt, SL)"
       ],
-      "execution_count": null,
+      "execution_count": 105,
       "outputs": []
     },
     {
@@ -391,7 +391,7 @@
         "colab": {}
       },
       "source": [
-        "pd.DataFrame(x.modelo)"
+        "pd.DataFrame(x)"
       ],
       "execution_count": null,
       "outputs": []
