--- a/Regresión/Regresion_SVR_Bajas_TEC.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_TEC.ipynb
@@ -31,7 +31,7 @@
       },
       "source": [
         "# Regresión con soporte máquina vectorial (SVR)\n",
-        "# objetivo: "
+        "# objetivo: Predecir las bajas del mes"
       ]
     },
     {
@@ -52,7 +52,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 95,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -74,13 +74,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "070e7904-ca9c-43bf-e626-5ce2c8d9292c"
+        "outputId": "fdf84f88-8142-4538-8ca5-2cff6cce27f7"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 96,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +103,7 @@
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,3].values"
       ],
-      "execution_count": 97,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -132,7 +132,7 @@
         "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[0,1])],remainder='passthrough')\n",
         "x= np.array(ct.fit_transform(x),dtype=np.integer)"
       ],
-      "execution_count": 98,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -155,7 +155,7 @@
       "source": [
         "x = x[:,1:]"
       ],
-      "execution_count": 99,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -205,7 +205,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.3, random_state=0)"
       ],
-      "execution_count": 100,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -242,10 +242,10 @@
         "from sklearn.preprocessing import StandardScaler\n",
         "sc_x = StandardScaler()\n",
         "sc_y = StandardScaler()\n",
-        "x= sc_x.fit_transform(x)\n",
-        "y= sc_y.fit_transform(y.reshape(-1,1))"
+        "x_train= sc_x.fit_transform(x_train)\n",
+        "y_train= sc_y.fit_transform(y_train.reshape(-1,1))"
       ],
-      "execution_count": 101,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -256,7 +256,7 @@
         "colab": {}
       },
       "source": [
-        "pd.DataFrame(y)"
+        "pd.DataFrame(x_train)"
       ],
       "execution_count": null,
       "outputs": []
@@ -280,15 +280,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "3dc367d8-1711-4a63-8dbc-9c8182e1dfc1"
+        "outputId": "4fd4aeb5-5810-4cde-9868-62ec47e12658"
       },
       "source": [
         "''' C: Evitar el overfity '''\n",
         "from sklearn.svm import SVR\n",
         "regression = SVR(C=1.0,kernel='rbf')\n",
-        "regression.fit(x,y.ravel())"
+        "regression.fit(x_train,y_train.ravel())"
       ],
-      "execution_count": 102,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -301,7 +301,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 102
+          "execution_count": 11
         }
       ]
     },
@@ -313,7 +313,7 @@
         "colab": {}
       },
       "source": [
-        "pd.DataFrame(x)"
+        "pd.DataFrame(x_train)"
       ],
       "execution_count": null,
       "outputs": []
@@ -352,7 +352,7 @@
       "source": [
         "x= np.append(arr=np.ones((len(x[:]),1)).astype(int),values=x, axis=1)"
       ],
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -380,7 +380,7 @@
         "x_opt = x[:,[0,1,2,3,4,5,6]]\n",
         "x_modelo = MEliminaAtras(x_opt, SL)"
       ],
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": []
     },
     {
