--- a/Regresión/Regresion_SVR_Bajas_TEC.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_TEC.ipynb
@@ -52,7 +52,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 15,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -74,13 +74,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "fdf84f88-8142-4538-8ca5-2cff6cce27f7"
+        "outputId": "04565ae5-7d34-448e-fb8d-e58686f1723e"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 16,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +103,7 @@
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,3].values"
       ],
-      "execution_count": 17,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -132,7 +132,7 @@
         "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[0,1])],remainder='passthrough')\n",
         "x= np.array(ct.fit_transform(x),dtype=np.integer)"
       ],
-      "execution_count": 18,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -155,7 +155,7 @@
       "source": [
         "x = x[:,1:]"
       ],
-      "execution_count": 19,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -205,7 +205,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.3, random_state=0)"
       ],
-      "execution_count": 20,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -245,7 +245,7 @@
         "x_train= sc_x.fit_transform(x_train)\n",
         "y_train= sc_y.fit_transform(y_train.reshape(-1,1))"
       ],
-      "execution_count": 25,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -280,7 +280,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "4fd4aeb5-5810-4cde-9868-62ec47e12658"
+        "outputId": "12b6877e-9c34-485b-e549-c97928a0ed08"
       },
       "source": [
         "''' C: Evitar el overfity '''\n",
@@ -288,7 +288,7 @@
         "regression = SVR(C=1.0,kernel='rbf')\n",
         "regression.fit(x_train,y_train.ravel())"
       ],
-      "execution_count": 11,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -301,7 +301,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 62
         }
       ]
     },
@@ -326,72 +326,8 @@
         "colab": {}
       },
       "source": [
-        "'''y_pred = sc_y.inverse_transform(regression.predict(sc_x.transform([[6.5]]) ))\n",
-        "pd.DataFrame(y_pred)'''"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "zco0UaW3dhjq",
-        "colab_type": "text"
-      },
-      "source": [
-        "### Dejamos las variables independientes de mayor significación (Eliminacion hacia atras)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "oRTCrScGaEur",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "x= np.append(arr=np.ones((len(x[:]),1)).astype(int),values=x, axis=1)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "8DOkqQQvdoSh",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "import statsmodels.api as smf\n",
-        "def MEliminaAtras (x2,SL):\n",
-        "  numCol = len(x2[0])\n",
-        "  for i in range(0,numCol):\n",
-        "    regresor_OLS = smf.OLS(y, x2.tolist()).fit()\n",
-        "    maxVar = max(regresor_OLS.pvalues).astype(float)\n",
-        "    if maxVar > SL:\n",
-        "      for j in range(0, numCol - i):\n",
-        "        if (regresor_OLS.pvalues[j].astype(float)==maxVar):\n",
-        "          x2 = np.delete(x2,j,1)\n",
-        "  regresor_OLS.summary()\n",
-        "  return x2\n",
-        "  \n",
-        "SL=0.05\n",
-        "x_opt = x[:,[0,1,2,3,4,5,6]]\n",
-        "x_modelo = MEliminaAtras(x_opt, SL)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "8Pu5ZP8jk7fy",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "pd.DataFrame(x)"
+        "y_pred = sc_y.inverse_transform(regression.predict(sc_x.transform([[6.5]]) ))\n",
+        "pd.DataFrame(y_pred)"
       ],
       "execution_count": null,
       "outputs": []
