--- a/Regresión/Regresion_SVR_Bajas_TEC.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_TEC.ipynb
@@ -52,7 +52,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 100,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -74,13 +74,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "05bddef9-60df-4b5e-c1ff-32a4e5c9fc62"
+        "outputId": "ad1c98e6-b8ae-4cf6-982a-3cdb80a0e306"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 101,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +103,7 @@
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,3].values"
       ],
-      "execution_count": 102,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -132,7 +132,7 @@
         "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[0,1])],remainder='passthrough')\n",
         "x= np.array(ct.fit_transform(x),dtype=np.integer)"
       ],
-      "execution_count": 103,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -155,7 +155,7 @@
       "source": [
         "x = x[:,1:]"
       ],
-      "execution_count": 104,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -205,7 +205,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.3, random_state=0)"
       ],
-      "execution_count": 105,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -245,7 +245,7 @@
         "x_train= sc_x.fit_transform(x_train)\n",
         "y_train= sc_y.fit_transform(y_train.reshape(-1,1))"
       ],
-      "execution_count": 107,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -253,30 +253,13 @@
       "metadata": {
         "id": "t5V6r84rgH1Q",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "e45a5cc9-e0cd-4de7-965c-3b3ecc9d1228"
+        "colab": {}
       },
       "source": [
         "len(x_train[:,0])"
       ],
-      "execution_count": 108,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "30"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 108
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -299,7 +282,20 @@
       "source": [
         "x_train=np.append(arr=np.ones((len(x_train[:,0]),1)).astype(int),values=x_train,axis=1)"
       ],
-      "execution_count": 109,
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Pz9-Pad7KvAs",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "pd.DataFrame(x_train)"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -326,7 +322,7 @@
         "x_opt=x_train[:,[0,1,2,3,4,5,6,7]]\n",
         "x_modelo = elimina(x_opt,sl)\n"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -348,15 +344,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "12b6877e-9c34-485b-e549-c97928a0ed08"
+        "outputId": "fae47998-39af-4035-c3d7-df170a84e674"
       },
       "source": [
         "''' C: Evitar el overfity '''\n",
         "from sklearn.svm import SVR\n",
         "regression = SVR(C=1.0,kernel='rbf')\n",
-        "regression.fit(x_train,y_train.ravel())"
+        "regression.fit(x_modelo,y_train.ravel())"
       ],
-      "execution_count": 62,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -369,7 +365,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 62
+          "execution_count": 13
         }
       ]
     },
@@ -381,7 +377,7 @@
         "colab": {}
       },
       "source": [
-        "pd.DataFrame(y_train)"
+        "pd.DataFrame(x_modelo)"
       ],
       "execution_count": null,
       "outputs": []
