--- a/Regresión/Regresion_SVR_Bajas_MES.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_MES.ipynb
@@ -52,7 +52,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 74,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -72,20 +72,24 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 122
         },
-        "outputId": "2627b601-a89e-4a9a-fe92-74a0c3d151f1"
+        "outputId": "24b528d0-92a0-4e73-d951-0bf10f4ae07a"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 75,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly&response_type=code\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "4/3wGq49WtPjNcWov9dWS7qCUI0yhne7Z31NlZ4NOhypCcbyAP4qptTQI\n",
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -99,11 +103,11 @@
         "colab": {}
       },
       "source": [
-        "data1 = pd.read_csv('/content/drive/My Drive/Dataset/DBajas_TEC.txt',delimiter='~')\n",
+        "data1 = pd.read_csv('/content/drive/My Drive/Dataset/DBajas_PERIODO.txt',delimiter='~')\n",
         "x = data1.iloc [:,:-1].values\n",
-        "y = data1.iloc [:,3].values"
+        "y = data1.iloc [:,1].values"
       ],
-      "execution_count": 76,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -124,15 +128,15 @@
         "colab": {}
       },
       "source": [
-        "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+        "'''from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
         "from sklearn.compose import ColumnTransformer\n",
         "labelencoder  = LabelEncoder()\n",
         "x[:,0] = labelencoder.fit_transform(x[:,0])\n",
         "x[:,1] = labelencoder.fit_transform(x[:,1])\n",
         "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[0,1])],remainder='passthrough')\n",
-        "x= np.array(ct.fit_transform(x),dtype=np.integer)"
+        "x= np.array(ct.fit_transform(x),dtype=np.integer)'''"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -153,9 +157,9 @@
         "colab": {}
       },
       "source": [
-        "x = x[:,1:]"
+        "'''x = x[:,1:]'''"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -203,9 +207,9 @@
       },
       "source": [
         "from sklearn.model_selection import train_test_split\n",
-        "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.3, random_state=0)"
+        "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.2, random_state=0)"
       ],
-      "execution_count": 79,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -245,7 +249,7 @@
         "x_train= sc_x.fit_transform(x_train)\n",
         "y_train= sc_y.fit_transform(y_train.reshape(-1,1))"
       ],
-      "execution_count": 66,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -259,70 +263,6 @@
         "len(x_train[:,0])"
       ],
       "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "mTT18UZsGBT7",
-        "colab_type": "text"
-      },
-      "source": [
-        "### Determinar dimensiones\n",
-        "### Eliminacion - atrás"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "dDGf8MwtIbo6",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "x_train=np.append(arr=np.ones((len(x_train[:,0]),1)).astype(int),values=x_train,axis=1)"
-      ],
-      "execution_count": 80,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Pz9-Pad7KvAs",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "pd.DataFrame(x_train)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "MCs7rTOCGPkF",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "import statsmodels.api as sm\n",
-        "def elimina (x2, sl):\n",
-        "  numvar=len(x2[0])\n",
-        "  for i in range(0,numvar):\n",
-        "    regresor_ols = sm.OLS(y_train,x2.tolist()).fit()\n",
-        "    maxvar= max(regresor_ols.pvalues).astype(float)\n",
-        "    if maxvar>sl:\n",
-        "      for j in range(0,numvar-i):\n",
-        "        if (regresor_ols.pvalues[j].astype(float)== maxvar):\n",
-        "          x2=np.delete(x2,j,1)\n",
-        "  regresor_ols.summary()\n",
-        "  return x2\n",
-        "sl=0.05\n",
-        "x_opt=x_train[:,[0,1,2,3,4,5,6,7]]\n",
-        "x_modelo = elimina(x_opt,sl)\n"
-      ],
-      "execution_count": 82,
       "outputs": []
     },
     {
@@ -344,15 +284,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "c5b68f3f-0ec9-49ba-accf-2301e66e25f3"
+        "outputId": "15d79a23-f73c-41ee-9c2d-3437c646cf28"
       },
       "source": [
         "''' C: Evitar el overfity '''\n",
         "from sklearn.svm import SVR\n",
         "regression = SVR(kernel='rbf')\n",
-        "regression.fit(x_modelo,y_train.ravel())"
+        "regression.fit(x_train,y_train.ravel())"
       ],
-      "execution_count": 83,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -365,22 +305,9 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 83
+          "execution_count": 13
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "egHxH4VWVsZC",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "pd.DataFrame(x_modelo)"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -390,8 +317,8 @@
         "colab": {}
       },
       "source": [
-        "'''y_pred = sc_y.inverse_transform(regression.predict(sc_x.transform([[6.5]]) ))\n",
-        "pd.DataFrame(y_pred)'''"
+        "y_pred = sc_y.inverse_transform(regression.predict(sc_x.transform([[202009]]) ))\n",
+        "pd.DataFrame(y_pred)"
       ],
       "execution_count": null,
       "outputs": []
@@ -420,14 +347,14 @@
       "source": [
         "x_grid= np.arange(min(x_modelo),max(x_modelo),0.01)\n",
         "x_grid= x_grid.reshape(len(x_grid),1)\n",
-        "'''plt.scatter(x_valor,y_valor,color=\"Red\")'''\n",
+        "plt.scatter(x_valor,y_valor,color=\"Red\")\n",
         "plt.plot(x_modelo,regression.predict(x_modelo),color=\"blue\")\n",
         "plt.title(\"Modelo SVR Valor Real\")\n",
         "plt.xlabel(\"Clase\")\n",
         "plt.ylabel(\"Bajas\")\n",
         "plt.show()"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
