--- a/Regresión/Regresion_SVR_Bajas_MES.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_MES.ipynb
@@ -52,7 +52,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 62,
+      "execution_count": 119,
       "outputs": []
     },
     {
@@ -74,13 +74,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "cd5d43a2-10a4-4d8f-c11b-546920e1bd2d"
+        "outputId": "819a3b80-db7a-4224-a72a-b8730c9983cf"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 63,
+      "execution_count": 120,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +103,7 @@
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,1].values"
       ],
-      "execution_count": 64,
+      "execution_count": 121,
       "outputs": []
     },
     {
@@ -182,7 +182,7 @@
         "'''x_train=x\n",
         "y_train=y"
       ],
-      "execution_count": 66,
+      "execution_count": 122,
       "outputs": []
     },
     {
@@ -206,7 +206,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.2, random_state=0)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -246,7 +246,7 @@
         "x_train= sc_x.fit_transform(x_train)\n",
         "y_train= sc_y.fit_transform(y_train.reshape(-1,1))"
       ],
-      "execution_count": 68,
+      "execution_count": 124,
       "outputs": []
     },
     {
@@ -281,7 +281,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "7e37e369-58de-44dc-b7fc-5885aa55e37f"
+        "outputId": "0f8e2ad3-f995-49d3-ff1e-55d1c4c499d2"
       },
       "source": [
         "''' C: Evitar el overfity '''\n",
@@ -289,7 +289,7 @@
         "regression = SVR(kernel='rbf')\n",
         "regression.fit(x_train,y_train.ravel())"
       ],
-      "execution_count": 69,
+      "execution_count": 126,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -302,7 +302,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 69
+          "execution_count": 126
         }
       ]
     },
@@ -311,14 +311,79 @@
       "metadata": {
         "id": "Qb1Y9sXwMIcZ",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 173
+        },
+        "outputId": "e600f039-cc16-400c-b554-52da47130437"
       },
       "source": [
-        "y_pred = sc_y.inverse_transform(regression.predict(sc_x.transform([[202010]]) ))\n",
+        "nuevo= np.array([202009,202010,202011,202012])\n",
+        "y_pred = sc_y.inverse_transform(regression.predict(sc_x.transform(nuevo.reshape(-1,1)) ))\n",
         "pd.DataFrame(y_pred)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 138,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>24249.690036</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>22774.118717</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>21798.250929</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>21405.376271</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "              0\n",
+              "0  24249.690036\n",
+              "1  22774.118717\n",
+              "2  21798.250929\n",
+              "3  21405.376271"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 138
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -332,7 +397,7 @@
         "y_valor= sc_y.inverse_transform(y_train)\n",
         "y_predic_valor= sc_y.inverse_transform(regression.predict(x_train))"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -379,7 +444,7 @@
         "plt.ylabel(\"Bajas\")\n",
         "plt.show()"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
