--- a/Regresión/Regresion_SVR_Bajas_MES.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_MES.ipynb
@@ -311,11 +311,7 @@
       "metadata": {
         "id": "Qb1Y9sXwMIcZ",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 54
-        },
-        "outputId": "2d73b267-c2a1-472b-d924-c32dda53fbb7"
+        "colab": {}
       },
       "source": [
         "nuevo= np.array([])\n",
@@ -324,24 +320,8 @@
         "y_pred=sc_y.inverse_transform(regression.predict(sc_x.transform(nuevo.reshape(-1,1))))\n",
         "pd.DataFrame(y_pred)"
       ],
-      "execution_count": 153,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'nuevo= np.array([202001,202002,202003,202004,202005,202006,202007,202008,202009,202010,202011,202012])\\ny_pred = sc_y.inverse_transform(regression.predict(sc_x.transform(nuevo.reshape(-1,1)) ))\\npd.DataFrame(y_pred)'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 153
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -428,7 +408,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "203d7e7d-8645-4a0e-97ac-4b202c757c1a"
+        "outputId": "03a9fa78-d120-4a76-94f1-b698ce23aedc"
       },
       "source": [
         "x_grid=np.arange(min(nuevo),max(nuevo),0.01)\n",
@@ -440,7 +420,7 @@
         "plt.ylabel(\"Bajas\")\n",
         "plt.show()"
       ],
-      "execution_count": 155,
+      "execution_count": 162,
       "outputs": [
         {
           "output_type": "display_data",
