--- a/Regresión/Regresion_SVR_Bajas_MES.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_MES.ipynb
@@ -52,7 +52,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 119,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -74,13 +74,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "819a3b80-db7a-4224-a72a-b8730c9983cf"
+        "outputId": "d2a29285-371b-4102-f81e-875829bc905b"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 120,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +103,33 @@
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,1].values"
       ],
-      "execution_count": 121,
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4zakNkcb222f",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "pd.DataFrame(x)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1-RPj__o27Us",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "pd.DataFrame(y)"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -121,7 +147,11 @@
       "metadata": {
         "id": "1xHeUpIU59aN",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "bd9699fb-0697-4efd-95bf-27b1bafdf2d9"
       },
       "source": [
         "'''from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
@@ -132,8 +162,24 @@
         "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[0,1])],remainder='passthrough')\n",
         "x= np.array(ct.fit_transform(x),dtype=np.integer)'''"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "\"from sklearn.preprocessing import LabelEncoder, OneHotEncoder\\nfrom sklearn.compose import ColumnTransformer\\nlabelencoder  = LabelEncoder()\\nx[:,0] = labelencoder.fit_transform(x[:,0])\\nx[:,1] = labelencoder.fit_transform(x[:,1])\\nct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[0,1])],remainder='passthrough')\\nx= np.array(ct.fit_transform(x),dtype=np.integer)\""
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -179,10 +225,10 @@
         "colab": {}
       },
       "source": [
-        "'''x_train=x\n",
+        "x_train=x\n",
         "y_train=y"
       ],
-      "execution_count": 122,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -203,10 +249,10 @@
         "colab": {}
       },
       "source": [
-        "from sklearn.model_selection import train_test_split\n",
-        "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.2, random_state=0)"
+        "'''from sklearn.model_selection import train_test_split\n",
+        "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.2, random_state=0)'''"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -246,7 +292,7 @@
         "x_train= sc_x.fit_transform(x_train)\n",
         "y_train= sc_y.fit_transform(y_train.reshape(-1,1))"
       ],
-      "execution_count": 124,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -254,13 +300,30 @@
       "metadata": {
         "id": "t5V6r84rgH1Q",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "87660030-89c6-47c9-c70c-d5addde79d38"
       },
       "source": [
         "len(x_train[:,0])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 30
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -281,7 +344,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "0f8e2ad3-f995-49d3-ff1e-55d1c4c499d2"
+        "outputId": "ebfd891c-e0d8-42c1-d089-a3082173105c"
       },
       "source": [
         "''' C: Evitar el overfity '''\n",
@@ -289,7 +352,7 @@
         "regression = SVR(kernel='rbf')\n",
         "regression.fit(x_train,y_train.ravel())"
       ],
-      "execution_count": 126,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -302,7 +365,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 126
+          "execution_count": 31
         }
       ]
     },
@@ -335,7 +398,7 @@
         "y_valor= sc_y.inverse_transform(y_train)\n",
         "y_predic_valor= sc_y.inverse_transform(regression.predict(x_train))"
       ],
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -370,7 +433,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "c3af9a14-787c-4e83-d571-ae57b0f63534"
+        "outputId": "bd4a431c-0b11-44e8-a9eb-14fd06396fa9"
       },
       "source": [
         "x_grid= np.arange(min(x_valor),max(x_valor),0.01)\n",
@@ -382,7 +445,7 @@
         "plt.ylabel(\"Bajas\")\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "display_data",
@@ -408,7 +471,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "03a9fa78-d120-4a76-94f1-b698ce23aedc"
+        "outputId": "81b26460-5031-4606-b379-c01e95f78b86"
       },
       "source": [
         "x_grid=np.arange(min(nuevo),max(nuevo),0.01)\n",
@@ -420,7 +483,7 @@
         "plt.ylabel(\"Bajas\")\n",
         "plt.show()"
       ],
-      "execution_count": 162,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "display_data",
