--- a/Regresión/Regresion_SVR_Bajas_MES.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_MES.ipynb
@@ -52,7 +52,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 21,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -74,13 +74,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "d2a29285-371b-4102-f81e-875829bc905b"
+        "outputId": "ab259c15-ef93-40d2-a75f-d2a92415d3ed"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 22,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +103,7 @@
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,1].values"
       ],
-      "execution_count": 23,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -162,7 +162,7 @@
         "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[0,1])],remainder='passthrough')\n",
         "x= np.array(ct.fit_transform(x),dtype=np.integer)'''"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -225,10 +225,10 @@
         "colab": {}
       },
       "source": [
-        "x_train=x\n",
+        "'''x_train=x\n",
         "y_train=y"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -249,10 +249,10 @@
         "colab": {}
       },
       "source": [
-        "'''from sklearn.model_selection import train_test_split\n",
-        "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.2, random_state=0)'''"
+        "from sklearn.model_selection import train_test_split\n",
+        "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.2, random_state=0)"
       ],
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -292,7 +292,7 @@
         "x_train= sc_x.fit_transform(x_train)\n",
         "y_train= sc_y.fit_transform(y_train.reshape(-1,1))"
       ],
-      "execution_count": 29,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -300,30 +300,13 @@
       "metadata": {
         "id": "t5V6r84rgH1Q",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "87660030-89c6-47c9-c70c-d5addde79d38"
+        "colab": {}
       },
       "source": [
         "len(x_train[:,0])"
       ],
-      "execution_count": 30,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "8"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 30
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -344,7 +327,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "ebfd891c-e0d8-42c1-d089-a3082173105c"
+        "outputId": "87dd2b97-14d0-4462-80a5-b942ba83c256"
       },
       "source": [
         "''' C: Evitar el overfity '''\n",
@@ -352,7 +335,7 @@
         "regression = SVR(kernel='rbf')\n",
         "regression.fit(x_train,y_train.ravel())"
       ],
-      "execution_count": 31,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -365,7 +348,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 11
         }
       ]
     },
@@ -398,7 +381,7 @@
         "y_valor= sc_y.inverse_transform(y_train)\n",
         "y_predic_valor= sc_y.inverse_transform(regression.predict(x_train))"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -445,7 +428,7 @@
         "plt.ylabel(\"Bajas\")\n",
         "plt.show()"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -483,7 +466,7 @@
         "plt.ylabel(\"Bajas\")\n",
         "plt.show()"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
