--- a/Regresión/Regresion_SVR_Bajas_MES.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_MES.ipynb
@@ -52,7 +52,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 66,
+      "execution_count": 108,
       "outputs": []
     },
     {
@@ -74,13 +74,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "09f6faf9-59c4-4f87-f090-ffeb0ae4b900"
+        "outputId": "9bfc53c8-3ff4-42f2-f7b1-b686cbc269e3"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 67,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +103,7 @@
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,1].values"
       ],
-      "execution_count": 68,
+      "execution_count": 110,
       "outputs": []
     },
     {
@@ -252,7 +252,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.2, random_state=0)"
       ],
-      "execution_count": 69,
+      "execution_count": 111,
       "outputs": []
     },
     {
@@ -292,7 +292,7 @@
         "x_train= sc_x.fit_transform(x_train)\n",
         "y_train= sc_y.fit_transform(y_train.reshape(-1,1))"
       ],
-      "execution_count": 71,
+      "execution_count": 113,
       "outputs": []
     },
     {
@@ -344,7 +344,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "6b57d47e-d66c-4fdf-b2c4-42e08a65b6a6"
+        "outputId": "3bc62537-3105-4a2e-a105-be3aa9602545"
       },
       "source": [
         "''' C: Evitar el overfity '''\n",
@@ -352,7 +352,7 @@
         "regression = SVR(kernel='rbf')\n",
         "regression.fit(x_train,y_train.ravel())"
       ],
-      "execution_count": 72,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -365,7 +365,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 72
+          "execution_count": 114
         }
       ]
     },
@@ -391,19 +391,98 @@
       "metadata": {
         "id": "gVigaMXLc2Za",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 266
+        },
+        "outputId": "a1769b75-5d5f-41d7-ab86-c8cf6d406620"
       },
       "source": [
         "muestra=np.array([])\n",
         "y_muestra=np.array([])\n",
-        "for i in range(202001, 202008):\n",
-        "  muestra=np.append(muestra,i)\n",
-        "  '''y_muestra=sc_y.inverse_transform([y_train[:,0][i]])'''\n",
+        "for i in range(1, 8):\n",
+        "  muestra=np.append(muestra,sc_x.inverse_transform([x_train[:,0][i]]))\n",
+        "  y_muestra=np.append(y_muestra,sc_y.inverse_transform([y_train[:,0][i]]))\n",
         "y_pred_muestra=sc_y.inverse_transform(regression.predict(sc_x.transform(muestra.reshape(-1,1))))\n",
         "pd.DataFrame(y_pred_muestra)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 115,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>19465.015635</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>23963.918921</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>20164.258331</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>32474.171904</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>20248.641191</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>24121.254589</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>24364.007314</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "              0\n",
+              "0  19465.015635\n",
+              "1  23963.918921\n",
+              "2  20164.258331\n",
+              "3  32474.171904\n",
+              "4  20248.641191\n",
+              "5  24121.254589\n",
+              "6  24364.007314"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 115
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -417,6 +496,126 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E6sbgiEFvxnA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e405e8bd-989f-43f7-d08d-4de00b86bdfd"
+      },
+      "source": [
+        "y_train[:,0][0]"
+      ],
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-0.9405732601785164"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 86
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T7Dt82kUvSl2",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "6eccecff-dee1-4050-8f7d-f3b7de72afd0"
+      },
+      "source": [
+        "x_train[:,0][0]"
+      ],
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.6779914302870683"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 85
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_CW4vl7gvKPq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "014ad9a2-766a-4d0f-ff95-3170ccd6306b"
+      },
+      "source": [
+        "sc_y.inverse_transform([y_train[:,0][0]])"
+      ],
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([19108.])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 102
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wgDTE_CWyl3P",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "815a898f-2489-4935-f2ea-251809579e7d"
+      },
+      "source": [
+        "sc_x.inverse_transform([x_train[:,0][0]])"
+      ],
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([201908.])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 104
+        }
+      ]
     },
     {
       "cell_type": "code",
