--- a/Regresión/Regresion_SVR_Bajas_MES.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_MES.ipynb
@@ -357,7 +357,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "04f41827-8358-485a-fa5e-825c6851f2f7"
+        "outputId": "3235f5bf-e4ad-40a8-be92-d29944e8c218"
       },
       "source": [
         "''' C: Evitar el overfity '''\n",
@@ -365,7 +365,7 @@
         "regression = SVR(kernel='rbf')\n",
         "regression.fit(muestra.reshape(-1,1),y_muestra.ravel())"
       ],
-      "execution_count": 191,
+      "execution_count": 200,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -378,26 +378,23 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 191
+          "execution_count": 200
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fyKNJXQu6vUb",
+        "id": "cQ8W4hTf8Cjm",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "muestra=np.array([])\n",
-        "y_muestra=np.array([])\n",
-        "for i in range(0, 7):\n",
-        "    muestra=np.append(muestra,sc_x.inverse_transform([x_train[:,0][i]]))\n",
-        "    y_muestra=np.append(y_muestra,sc_y.inverse_transform([y_train[:,0][i]]))\n",
-        "y_pred_muestra=sc_y.inverse_transform(regression.predict(sc_x.transform(muestra.reshape(-1,1))))"
+        "x_valor=sc_x.inverse_transform(muestra)\n",
+        "y_valor= sc_y.inverse_transform(y_muestra)\n",
+        "y_predic_valor= sc_y.inverse_transform(regression.predict(muestra.reshape(-1,1)))"
       ],
-      "execution_count": null,
+      "execution_count": 202,
       "outputs": []
     },
     {
@@ -415,21 +412,6 @@
         "pd.DataFrame(y_pred)"
       ],
       "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "DjIuIJFaa7G5",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "x_valor=sc_x.inverse_transform(x_train)\n",
-        "y_valor= sc_y.inverse_transform(y_train)\n",
-        "y_predic_valor= sc_y.inverse_transform(regression.predict(x_train))"
-      ],
-      "execution_count": 55,
       "outputs": []
     },
     {
