--- a/Regresión/Regresion_SVR_Bajas_MES.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_MES.ipynb
@@ -52,7 +52,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 44,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -74,13 +74,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "c54c3200-2500-4c7d-cb9e-99f39dd8acf8"
+        "outputId": "4161059b-6d42-4377-c875-7de635b078e4"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 45,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +103,7 @@
         "x = data1.iloc [:,:-1].values\n",
         "y = data1.iloc [:,1].values"
       ],
-      "execution_count": 46,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -225,7 +225,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.2, random_state=0)"
       ],
-      "execution_count": 47,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -252,7 +252,7 @@
         "x_train= sc_x.fit_transform(x_train)\n",
         "y_train= sc_y.fit_transform(y_train.reshape(-1,1))"
       ],
-      "execution_count": 48,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -295,7 +295,7 @@
         "    muestra=np.append(muestra,([x_train[:,0][i]]))\n",
         "    y_muestra=np.append(y_muestra,([y_train[:,0][i]]))"
       ],
-      "execution_count": 49,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -317,14 +317,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "a7472d84-c3c8-44d7-9fb6-73c1b4561e4a"
+        "outputId": "6856e250-fc85-42ba-a6f3-46c8184af78b"
       },
       "source": [
         "from sklearn.svm import SVR\n",
         "regression = SVR(kernel='rbf')\n",
         "regression.fit(muestra.reshape(-1,1),y_muestra.ravel())"
       ],
-      "execution_count": 50,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -337,7 +337,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 50
+          "execution_count": 8
         }
       ]
     },
@@ -353,7 +353,7 @@
         "y_valor= sc_y.inverse_transform(y_muestra)\n",
         "y_predic_valor= sc_y.inverse_transform(regression.predict(muestra.reshape(-1,1)))"
       ],
-      "execution_count": 51,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -365,11 +365,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 445
         },
-        "outputId": "b1d30cfc-3c05-47da-9242-3dd89598e9bf"
+        "outputId": "a678c436-2c5f-4acf-a04f-acee19c19c12"
       },
       "source": [
         "xx = []; yy = []; yy_predic=[]\n",
-        "for i in range(7):\n",
+        "ciclo= len(muestra)\n",
+        "for i in range(ciclo):\n",
         "  xx.append([x_valor[i]])\n",
         "  yy.append([y_valor[i]])\n",
         "  yy_predic.append([y_predic_valor[i]])\n",
@@ -381,9 +382,9 @@
         "print(\"Antes de organizar:\"+\"\\n\"+str(tabla)+\"\\n\")\n",
         "# Organizamos y recreamos tabla\n",
         "tabla[:,0].sort()\n",
-        "for i in range(7):\n",
+        "for i in range(ciclo):\n",
         "  n_orgz =  tabla[i,0]\n",
-        "  for ii in range(7):\n",
+        "  for ii in range(ciclo):\n",
         "    n_norgz =  x_valor[ii]\n",
         "    if (int(n_norgz) == int(n_orgz)):\n",
         "      tabla[i,1] = y_valor[ii]\n",
@@ -392,7 +393,7 @@
         "      pass \n",
         "print(\"Despues de organizar:\"+\"\\n\"+str(tabla)+\"\\n\")"
       ],
-      "execution_count": 58,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -441,7 +442,7 @@
         "x_test= sc_x_t.fit_transform(x_test)\n",
         "y_test= sc_y_t.fit_transform(y_test.reshape(-1,1))"
       ],
-      "execution_count": 53,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -453,7 +454,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "7fb1e059-f34b-4db7-b038-fa60073baba0"
+        "outputId": "0fcbc3a4-149c-4558-b24d-99f942f09692"
       },
       "source": [
         "# MODELO SVR - Test\n",
@@ -461,7 +462,7 @@
         "regression = SVR(kernel='rbf')\n",
         "regression.fit(x_test.reshape(-1,1),y_test.ravel())"
       ],
-      "execution_count": 54,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -474,7 +475,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 54
+          "execution_count": 19
         }
       ]
     },
@@ -490,7 +491,7 @@
         "y_valor_t= sc_y_t.inverse_transform(y_test)\n",
         "y_predic_valor_t= sc_y_t.inverse_transform(regression.predict(x_test.reshape(-1,1)))"
       ],
-      "execution_count": 55,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -499,10 +500,9 @@
         "id": "_vn6bcP_39G6",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 952
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "480068b3-7cc6-47e7-ef71-e243842eb3c0"
+        "outputId": "3d00e589-9130-4e17-b991-afd2f7c1e3fd"
       },
       "source": [
         "xx_t = []; yy_t =[]; yy_predic_t=[]\n",
@@ -530,7 +530,7 @@
         "      pass \n",
         "print(\"Despues de organizar:\"+\"\\n\"+str(tabla_t)+\"\\n\")"
       ],
-      "execution_count": 83,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -677,11 +677,11 @@
         "colab": {}
       },
       "source": [
-        "nuevo= np.array([])\n",
+        "'''nuevo= np.array([])\n",
         "for i in range(202009 , 202012):\n",
         "  nuevo= np.append(nuevo, i)\n",
         "y_pred=sc_y.inverse_transform(regression.predict(sc_x.transform(nuevo.reshape(-1,1))))\n",
-        "pd.DataFrame(y_pred)"
+        "pd.DataFrame(y_pred)'''"
       ],
       "execution_count": null,
       "outputs": []
@@ -689,24 +689,49 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Zl4LqgK8eUQW",
+        "id": "moOJWv5p_ab9",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "879acd7b-4745-4779-9e08-509cff8c6789"
       },
       "source": [
-        "pd.DataFrame(y_valor)"
+        "# Margen de Error\n",
+        "error_muestra = [];\n",
+        "for i in range(ciclo):\n",
+        "  xx.append([x_valor[i]])\n",
+        "  yy.append([y_valor[i]])\n",
+        "  yy_predic.append([y_predic_valor[i]])\n",
+        "print(\"x_valor = \"+str(xx)+\"\\n\")\n",
+        "print(\"y_valor = \"+str(yy)+\"\\n\")\n",
+        "print(\"y_predic\"+str(yy_predic)+\"\\n\")\n",
+        "# Concatenamos \n",
+        "tabla = np.concatenate((xx, yy,yy_predic), axis=1)\n",
+        "print(\"Antes de organizar:\"+\"\\n\"+str(tabla)+\"\\n\")\n",
+        "# Organizamos y recreamos tabla\n",
+        "tabla[:,0].sort()\n",
+        "for i in range(ciclo):\n",
+        "  n_orgz =  tabla[i,0]\n",
+        "  for ii in range(ciclo):\n",
+        "    n_norgz =  x_valor[ii]\n",
+        "    if (int(n_norgz) == int(n_orgz)):\n",
+        "      tabla[i,1] = y_valor[ii]\n",
+        "      tabla[i,2]= y_predic_valor[ii]\n",
+        "    else:\n",
+        "      pass \n",
+        "print(\"Despues de organizar:\"+\"\\n\"+str(tabla)+\"\\n\")\n"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "4kCSDLgVkpuH",
-        "colab_type": "text"
-      },
-      "source": [
-        "### Visualizar los resultados"
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-85-41742e366370>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    error_train[]\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
       ]
     }
   ]
